--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# Ignore environment variables
 .env
 
 # Python cache files
@@ -11,9 +10,9 @@ __pycache__/
 venv/
 env/
 
-# VS Code settings
+# settings for Vs Code
 .vscode/
 
-# Other OS junk files
+# Other OS files
 .DS_Store
 Thumbs.db
